kubernetes/mutatingwebhookconfiguration-example-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"annotations":{},"name":"example-webhook"},"webhooks":[{"admissionReviewVersions":["v1beta1"],"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiRENDQWxTZ0F3SUJBZ0lVSThBazJJTitlZ0U0eW51VVRNSHlZNCtmYlNJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1RqRUxNQWtHQTFVRUJoTUNRVlV4RURBT0JnTlZCQWdUQjBWNFlXMXdiR1V4RGpBTUJnTlZCQWNUQlVsTwpSRWxCTVJBd0RnWURWUVFLRXdkRmVHRnRjR3hsTVFzd0NRWURWUVFMRXdKRFFUQW [...]
  creationTimestamp: "2024-01-24T06:21:43Z"
  name: example-webhook
  uid: 297ac207-da53-46bb-89f4-6c6c78a75544
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiRENDQWxTZ0F3SUJBZ0lVSThBazJJTitlZ0U0eW51VVRNSHlZNCtmYlNJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1RqRUxNQWtHQTFVRUJoTUNRVlV4RURBT0JnTlZCQWdUQjBWNFlXMXdiR1V4RGpBTUJnTlZCQWNUQlVsTwpSRWxCTVJBd0RnWURWUVFLRXdkRmVHRnRjR3hsTVFzd0NRWURWUVFMRXdKRFFUQWVGdzB5TXpFeE1qRXhNVFUwCk1EQmFGdzB5T0RFeE1Ua3hNVFUwTURCYU1FNHhDekFKQmdOVkJBWVRBa0ZWTVJBd0RnWURWUVFJRXdkRmVHRnQKY0d4bE1RNHdEQVlEVlFRSEV3VkpUa1JKUVRFUU1BNEdBMVVFQ2hNSFJYaGhiWEJzWlRFTE1Ba0dBMVVFQ3hNQwpRMEV3Z2dFaU1BME [...]
    service:
      name: example-webhook
      namespace: default
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: example-webhook.default.svc.cluster.local
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    - security.cerebrum.juniper.net
    apiVersions:
    - '*'
    operations:
    - CREATE
    - DELETE
    - UPDATE
    resources:
    - evpns
    - securegateways
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
